--- a/doc/api.yml
+++ b/doc/api.yml
@@ -925,6 +925,23 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
+#  /events/{id_event}:
+#      get:
+#          tags:
+#            - Events
+#          summary: get Event by id
+#          operationId: getEventById
+#          parameters:
+#            - name: id_event
+#              in: path
+#              required: true
+#          responses:
+#            '200':
+#                description: get event by id
+#                content:
+#                  application/json:
+#                      schema:
+#                        $ref: "#/components/schemas/Event"
   /events:
       get:
           tags:
@@ -981,80 +998,80 @@ paths:
               $ref: '#/components/responses/429'
             '500':
               $ref: '#/components/responses/500'
-
-  /events/{id_event}/eventParticipant:
-      get:
-          tags:
-            - EventParticipant
-          summary: get All participant to one event
-          operationId: getAllParticipantToOneEvent
-          parameters:
-            - name: page
-              in: query
-              schema:
-                $ref: '#/components/schemas/Page'
-            - name: pageSize
-              in: query
-              schema:
-                $ref: '#/components/schemas/PageSize'
-            - name: id_event
-              in: path
-              required: true
-              schema:
-                  type: string
-          responses:
-            '200':
-                description: list of eventParticipant to an event
-                content:
-                  application/json:
-                      schema:
-                        $ref: "#/components/schemas/EventParticipant"
-
-            '400':
-              $ref: '#/components/responses/400'
-            '403':
-              $ref: '#/components/responses/403'
-            '404':
-              $ref: '#/components/responses/404'
-            '429':
-              $ref: '#/components/responses/429'
-            '500':
-              $ref: '#/components/responses/500'
-
-  /eventParticipant:
-    post:
-      tags:
-        - EventParticipant
-      summary: Create an event participant
-      operationId: createAnEventParticipant
-      requestBody:
-        description: event participant to be created
-        required: true
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: "#/components/schemas/CreateEventParticipant"
-
-      responses:
-        '200':
-          description: event participant created
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/EventParticipant"
-
-        '400':
-          $ref: '#/components/responses/400'
-        '403':
-          $ref: '#/components/responses/403'
-        '404':
-          $ref: '#/components/responses/404'
-        '429':
-          $ref: '#/components/responses/429'
-        '500':
-          $ref: '#/components/responses/500'
+#
+#  /events/{id_event}/eventParticipant:
+#      get:
+#          tags:
+#            - EventParticipant
+#          summary: get All participant to one event
+#          operationId: getAllParticipantToOneEvent
+#          parameters:
+#            - name: page
+#              in: query
+#              schema:
+#                $ref: '#/components/schemas/Page'
+#            - name: pageSize
+#              in: query
+#              schema:
+#                $ref: '#/components/schemas/PageSize'
+#            - name: id_event
+#              in: path
+#              required: true
+#              schema:
+#                  type: string
+#          responses:
+#            '200':
+#                description: list of eventParticipant to an event
+#                content:
+#                  application/json:
+#                      schema:
+#                        $ref: "#/components/schemas/EventParticipant"
+#
+#            '400':
+#              $ref: '#/components/responses/400'
+#            '403':
+#              $ref: '#/components/responses/403'
+#            '404':
+#              $ref: '#/components/responses/404'
+#            '429':
+#              $ref: '#/components/responses/429'
+#            '500':
+#              $ref: '#/components/responses/500'
+#
+#  /eventParticipant:
+#    post:
+#      tags:
+#        - EventParticipant
+#      summary: Create an event participant
+#      operationId: createAnEventParticipant
+#      requestBody:
+#        description: event participant to be created
+#        required: true
+#        content:
+#          application/json:
+#            schema:
+#              type: array
+#              items:
+#                $ref: "#/components/schemas/CreateEventParticipant"
+#
+#      responses:
+#        '200':
+#          description: event participant created
+#          content:
+#            application/json:
+#              schema:
+#                $ref: "#/components/schemas/EventParticipant"
+#
+#        '400':
+#          $ref: '#/components/responses/400'
+#        '403':
+#          $ref: '#/components/responses/403'
+#        '404':
+#          $ref: '#/components/responses/404'
+#        '429':
+#          $ref: '#/components/responses/429'
+#        '500':
+#          $ref: '#/components/responses/500'
 components:
   securitySchemes:
     BearerAuth:
@@ -1319,21 +1336,6 @@ components:
           type: string
 
     Event:
-        allOf:
-          - $ref: '#/components/schemas/CreateEvent'
-        type: object
-        properties:
-          id:
-              type: string
-          status:
-            type: string
-            enum:
-              - "MISSING"
-              - "PRESENT"
-              - "EXPECTED"
-            default: "EXPECTED"
-
-    CreateEvent:
       type: object
       properties:
         eventName:
@@ -1352,21 +1354,29 @@ components:
           example: "2013-05-30T23:38:23.085Z"
         place:
           type: string
+        eventResponsible:
+          $ref: "#/components/schemas/User"
 
 
-    CreateEventParticipant:
-      type: object
-      properties:
-        idEventParticipant:
-          type: string
-        ref:
-          type: string
-        name:
-          type: string
-        eventToAttend:
-          type: array
-          allOf:
-            - $ref: "#/components/schemas/Event"
-
+#    CreateEventParticipant:
+#      type: object
+#      properties:
+#        idEventParticipant:
+#          type: string
+#        ref:
+#          type: string
+#        name:
+#          type: string
+#        eventToAttend:
+#          type: array
+#          allOf:
+#            - $ref: "#/components/schemas/Event"
+#                status:
+#            type: string
+#            enum:
+#              - "MISSING"
+#              - "PRESENT"
+#              - "EXPECTED"
+#            default: "EXPECTED"
 
 
