--- a/doc/api.yml
+++ b/doc/api.yml
@@ -925,23 +925,39 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
-#  /events/{id_event}:
-#      get:
-#          tags:
-#            - Events
-#          summary: get Event by id
-#          operationId: getEventById
-#          parameters:
-#            - name: id_event
-#              in: path
-#              required: true
-#          responses:
-#            '200':
-#                description: get event by id
-#                content:
-#                  application/json:
-#                      schema:
-#                        $ref: "#/components/schemas/Event"
+
+
+  /events/{id_event}:
+    get:
+      tags:
+        - Events
+      summary: Get place by identifier
+      parameters:
+        - name: id_event
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: getEventById
+      responses:
+        '200':
+          description: The identified event
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+
+
   /events:
       get:
           tags:
@@ -1353,48 +1369,33 @@ components:
           format: date-time
           example: "2013-05-30T23:38:23.085Z"
         place:
-          type: string
+          $ref: "#/components/schemas/Place"
         eventResponsible:
           $ref: "#/components/schemas/User"
 
-    EventParticipant:
+    CreateEventParticipant:
         type: object
         properties:
-          idEventParticipant:
-              type: string
           ref:
               type: string
           eventParticipant:
               $ref: "#/components/schemas/User"
           eventToAttend:
               $ref: "#/components/schemas/Event"
-          status:
-              type: string
-              enum:
-                - "MISSING"
-                - "PRESENT"
-                - "EXPECTED"
-              default: "EXPECTED"
 
-#    CreateEventParticipant:
-#      type: object
-#      properties:
-#        idEventParticipant:
-#          type: string
-#        ref:
-#          type: string
-#        name:
-#          type: string
-#        eventToAttend:
-#          type: array
-#          allOf:
-#            - $ref: "#/components/schemas/Event"
-#                status:
-#            type: string
-#            enum:
-#              - "MISSING"
-#              - "PRESENT"
-#              - "EXPECTED"
-#            default: "EXPECTED"
+    EventParticipant:
+      allOf:
+        - $ref: "#/components/schemas/CreateEventParticipant"
+      type: object
+      properties:
+        idEventParticipant:
+          type: string
+        status:
+          type: string
+          enum:
+            - "MISSING"
+            - "PRESENT"
+            - "EXPECTED"
+          default: "EXPECTED"
 
 
