--- a/doc/api.yml
+++ b/doc/api.yml
@@ -1014,80 +1014,80 @@ paths:
               $ref: '#/components/responses/429'
             '500':
               $ref: '#/components/responses/500'
-#
-#  /events/{id_event}/eventParticipant:
-#      get:
-#          tags:
-#            - EventParticipant
-#          summary: get All participant to one event
-#          operationId: getAllParticipantToOneEvent
-#          parameters:
-#            - name: page
-#              in: query
-#              schema:
-#                $ref: '#/components/schemas/Page'
-#            - name: pageSize
-#              in: query
-#              schema:
-#                $ref: '#/components/schemas/PageSize'
-#            - name: id_event
-#              in: path
-#              required: true
-#              schema:
-#                  type: string
-#          responses:
-#            '200':
-#                description: list of eventParticipant to an event
-#                content:
-#                  application/json:
-#                      schema:
-#                        $ref: "#/components/schemas/EventParticipant"
-#
-#            '400':
-#              $ref: '#/components/responses/400'
-#            '403':
-#              $ref: '#/components/responses/403'
-#            '404':
-#              $ref: '#/components/responses/404'
-#            '429':
-#              $ref: '#/components/responses/429'
-#            '500':
-#              $ref: '#/components/responses/500'
-#
-#  /eventParticipant:
-#    post:
-#      tags:
-#        - EventParticipant
-#      summary: Create an event participant
-#      operationId: createAnEventParticipant
-#      requestBody:
-#        description: event participant to be created
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              type: array
-#              items:
-#                $ref: "#/components/schemas/CreateEventParticipant"
-#
-#      responses:
-#        '200':
-#          description: event participant created
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/EventParticipant"
-#
-#        '400':
-#          $ref: '#/components/responses/400'
-#        '403':
-#          $ref: '#/components/responses/403'
-#        '404':
-#          $ref: '#/components/responses/404'
-#        '429':
-#          $ref: '#/components/responses/429'
-#        '500':
-#          $ref: '#/components/responses/500'
+
+  /events/{id_event}/eventParticipant:
+      get:
+          tags:
+            - EventParticipant
+          summary: get All participant to one event
+          operationId: getAllParticipantToOneEvent
+          parameters:
+            - name: page
+              in: query
+              schema:
+                $ref: '#/components/schemas/Page'
+            - name: pageSize
+              in: query
+              schema:
+                $ref: '#/components/schemas/PageSize'
+            - name: id_event
+              in: path
+              required: true
+              schema:
+                  type: string
+          responses:
+            '200':
+                description: list of eventParticipant to an event
+                content:
+                  application/json:
+                      schema:
+                        $ref: "#/components/schemas/EventParticipant"
+
+            '400':
+              $ref: '#/components/responses/400'
+            '403':
+              $ref: '#/components/responses/403'
+            '404':
+              $ref: '#/components/responses/404'
+            '429':
+              $ref: '#/components/responses/429'
+            '500':
+              $ref: '#/components/responses/500'
+
+  /eventParticipant:
+    post:
+      tags:
+        - EventParticipant
+      summary: Create an event participant
+      operationId: createAnEventParticipant
+      requestBody:
+        description: event participant to be created
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/CreateEventParticipant"
+
+      responses:
+        '200':
+          description: event participant created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EventParticipant"
+
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
 components:
   securitySchemes:
     BearerAuth:
@@ -1354,6 +1354,8 @@ components:
     Event:
       type: object
       properties:
+        idEvent:
+            type: string
         eventName:
           type: string
           example: "COURSE"
@@ -1376,8 +1378,6 @@ components:
     CreateEventParticipant:
         type: object
         properties:
-          ref:
-              type: string
           eventParticipant:
               $ref: "#/components/schemas/User"
           eventToAttend:
