--- a/doc/api.yml
+++ b/doc/api.yml
@@ -839,7 +839,7 @@ paths:
   /places:
     get:
       tags:
-        - Place
+        - Places
       summary: Get all places
       operationId: getPlaces
       responses:
@@ -848,7 +848,6 @@ paths:
           content:
             application/json:
               schema:
-                type: array
                 items:
                   $ref: '#/components/schemas/Place'
         '400':
@@ -863,7 +862,7 @@ paths:
           $ref: '#/components/responses/500'
     put:
       tags:
-        - Place
+        - Places
       summary: Create new places or update existing groups
       description: Update places when `id` are provided, create them otherwise.
       operationId: createOrUpdatePlaces
@@ -873,18 +872,14 @@ paths:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/Place'
+              $ref: '#/components/schemas/Place'
       responses:
         '200':
           description: The created or updated places
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Place'
+                $ref: '#/components/schemas/Place'
         '400':
           $ref: '#/components/responses/400'
         '403':
@@ -899,7 +894,7 @@ paths:
   /places/{id}:
     get:
       tags:
-        - Place
+        - Places
       summary: Get place by identifier
       parameters:
         - name: id
@@ -930,7 +925,7 @@ paths:
   /events/{id_event}:
     get:
       tags:
-        - Events
+        - Places
       summary: Get event by identifier
       parameters:
         - name: id_event
@@ -961,7 +956,7 @@ paths:
   /events:
       get:
           tags:
-            - Events
+            - Places
           summary: Get All Events
           operationId: getAllEvents
           responses:
@@ -984,7 +979,7 @@ paths:
 
       put:
           tags:
-            - Events
+            - Places
           summary: Create or update an event
           operationId: createOrUpdateEvent
           requestBody:
@@ -1018,7 +1013,7 @@ paths:
   /events/{id_event}/eventParticipant:
       get:
           tags:
-            - EventParticipant
+            - Places
           summary: get All participant to one event
           operationId: getAllParticipantToOneEvent
           parameters:
@@ -1053,41 +1048,44 @@ paths:
               $ref: '#/components/responses/429'
             '500':
               $ref: '#/components/responses/500'
-
-  /eventParticipant:
-    post:
-      tags:
-        - EventParticipant
-      summary: Create an event participant
-      operationId: createAnEventParticipant
-      requestBody:
-        description: event participant to be created
-        required: true
-        content:
-          application/json:
+      put:
+        tags:
+          - Places
+        summary: Create eventParticipants
+        operationId: createEventParticipants
+        parameters:
+          - name: id_event
+            in: path
+            required: true
             schema:
-              type: array
-              items:
-                $ref: "#/components/schemas/CreateEventParticipant"
-
-      responses:
-        '200':
-          description: event participant created
+              type: string
+        requestBody:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/EventParticipant"
+                type: array
+                items:
+                  $ref: '#/components/schemas/CreateEventParticipants'
+        responses:
+          '200':
+            description: List of participants
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/EventParticipant'
+          '400':
+            $ref: '#/components/responses/400'
+          '403':
+            $ref: '#/components/responses/403'
+          '404':
+            $ref: '#/components/responses/404'
+          '429':
+            $ref: '#/components/responses/429'
+          '500':
+            $ref: '#/components/responses/500'
 
-        '400':
-          $ref: '#/components/responses/400'
-        '403':
-          $ref: '#/components/responses/403'
-        '404':
-          $ref: '#/components/responses/404'
-        '429':
-          $ref: '#/components/responses/429'
-        '500':
-          $ref: '#/components/responses/500'
 components:
   securitySchemes:
     BearerAuth:
@@ -1345,7 +1343,7 @@ components:
       properties:
         id:
           type: string
-        placeName:
+        location:
           type: string
           example: "HEI Ivandry"
         city:
@@ -1371,31 +1369,35 @@ components:
           format: date-time
           example: "2013-05-30T23:38:23.085Z"
         place:
-          $ref: "#/components/schemas/Place"
-        eventResponsible:
-          $ref: "#/components/schemas/User"
+          type: string
+          example: "HEI Ivandry"
+        responsible:
+          type: string
+          example: "Lou Andria"
 
-    CreateEventParticipant:
-        type: object
-        properties:
-          eventParticipant:
-              $ref: "#/components/schemas/User"
-          eventToAttend:
-              $ref: "#/components/schemas/Event"
-
-    EventParticipant:
-      allOf:
-        - $ref: "#/components/schemas/CreateEventParticipant"
+    CreateEventParticipants:
       type: object
       properties:
-        idEventParticipant:
+        event_id:
+          type: string
+        group_id:
+          type: string
+
+    EventParticipant:
+      type: object
+      properties:
+        id:
+          type: string
+          example: "uuid"
+        ref:
+          type: string
+          example: "STD21034"
+        event_id:
           type: string
         status:
           type: string
           enum:
-            - "MISSING"
-            - "PRESENT"
-            - "EXPECTED"
-          default: "EXPECTED"
-
+            - EXPECTED
+            - HERE
+            - MISSING
 
