feat: adding features

--- a/doc/api.yml
+++ b/doc/api.yml
@@ -3,7 +3,7 @@ info:
   version: '1.0'
   title: HEI Admin API
   description: |
-    _Programmatically connect to a computer programming [school](https://hei.school)._
+    Programmatically connect to a computer programming [school](https://hei.school).
     After [joining us](mailto:contact@hei.school),
     you can get an identification token from
     our [dev](https://dev-hei-admin.auth.eu-west-3.amazoncognito.com/oauth2/authorize?client_id=5s8cg50doahmu855rlc8fr6qmp&response_type=token&scope=email+openid&redirect_uri=https%3A%2F%2Fapi-dev.hei.school%2Fwhoami)
@@ -127,7 +127,7 @@ paths:
       tags:
         - Teaching
       summary: Create new groups or update existing groups
-      description: Update groups when `id` are provided, create them otherwise.
+      description: Update groups when id are provided, create them otherwise.
       operationId: createOrUpdateGroups
       requestBody:
         description: Groups to update
@@ -239,7 +239,7 @@ paths:
       tags:
         - Users
       summary: Create new students or update existing students
-      description: Update students when `id` are provided, create them otherwise.
+      description: Update students when id are provided, create them otherwise.
       operationId: createOrUpdateStudents
       requestBody:
         required: true
@@ -434,7 +434,7 @@ paths:
       tags:
         - Users
       summary: Create new teachers or update existing teachers
-      description: Update teachers when `id` are provided, create them otherwise.
+      description: Update teachers when id are provided, create them otherwise.
       operationId: createOrUpdateTeachers
       requestBody:
         required: true
@@ -864,7 +864,7 @@ paths:
       tags:
         - Places
       summary: Create new places or update existing groups
-      description: Update places when `id` are provided, create them otherwise.
+      description: Update places when id are provided, create them otherwise.
       operationId: createOrUpdatePlaces
       requestBody:
         description: Places to update
@@ -954,137 +954,157 @@ paths:
 
 
   /events:
-      get:
-          tags:
-            - Places
-          summary: Get All Events
-          operationId: getAllEvents
-          responses:
-            '200':
-                description: List of all events
-                content:
-                  application/json:
-                      schema:
-                          $ref: "#/components/schemas/Event"
-            '400':
-              $ref: '#/components/responses/400'
-            '403':
-              $ref: '#/components/responses/403'
-            '404':
-              $ref: '#/components/responses/404'
-            '429':
-              $ref: '#/components/responses/429'
-            '500':
-              $ref: '#/components/responses/500'
-
-      put:
-          tags:
-            - Places
-          summary: Create or update an event
-          operationId: createOrUpdateEvent
-          requestBody:
-            description: event to be create or updated
-            required: true
-            content:
-              application/json:
-                schema:
-                  type: array
-                  items:
-                      $ref: "#/components/schemas/Event"
-          responses:
-            '200':
-                description: event created or updated
-                content:
-                  application/json:
-                      schema:
-                        $ref: "#/components/schemas/Event"
-
-            '400':
-              $ref: '#/components/responses/400'
-            '403':
-              $ref: '#/components/responses/403'
-            '404':
-              $ref: '#/components/responses/404'
-            '429':
-              $ref: '#/components/responses/429'
-            '500':
-              $ref: '#/components/responses/500'
-
-  /events/{id_event}/eventParticipant:
-      get:
-          tags:
-            - Places
-          summary: get All participant to one event
-          operationId: getAllParticipantToOneEvent
-          parameters:
-            - name: page
-              in: query
-              schema:
-                $ref: '#/components/schemas/Page'
-            - name: pageSize
-              in: query
-              schema:
-                $ref: '#/components/schemas/PageSize'
-            - name: id_event
-              in: path
-              required: true
-              schema:
-                  type: string
-          responses:
-            '200':
-                description: list of eventParticipant to an event
-                content:
-                  application/json:
-                      schema:
-                        $ref: "#/components/schemas/EventParticipant"
-
-            '400':
-              $ref: '#/components/responses/400'
-            '403':
-              $ref: '#/components/responses/403'
-            '404':
-              $ref: '#/components/responses/404'
-            '429':
-              $ref: '#/components/responses/429'
-            '500':
-              $ref: '#/components/responses/500'
-      put:
-        tags:
-          - Places
-        summary: Create eventParticipants
-        operationId: createEventParticipants
-        parameters:
-          - name: id_event
-            in: path
-            required: true
-            schema:
-              type: string
-        requestBody:
+    get:
+      tags:
+        - Places
+      summary: Get All Events
+      operationId: getAllEvents
+      responses:
+        '200':
+          description: List of all events
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/CreateEventParticipants'
-        responses:
-          '200':
-            description: List of participants
-            content:
-              application/json:
-                schema:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/EventParticipant'
-          '400':
-            $ref: '#/components/responses/400'
-          '403':
-            $ref: '#/components/responses/403'
-          '404':
-            $ref: '#/components/responses/404'
-          '429':
-            $ref: '#/components/responses/429'
-          '500':
-            $ref: '#/components/responses/500'
+                  $ref: "#/components/schemas/Event"
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+
+    put:
+      tags:
+        - Places
+      summary: Create or update an event
+      operationId: createOrUpdateEvent
+      requestBody:
+        description: event to be create or updated
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/Event"
+      responses:
+        '200':
+          description: event created or updated
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Event"
+
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+
+  /events/{id_event}/eventParticipant:
+    get:
+      tags:
+        - Places
+      summary: get All participant to one event
+      operationId: getAllParticipantToOneEvent
+      parameters:
+        - name: page
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: pageSize
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
+        - name: id_event
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: list of eventParticipant to an event
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/EventParticipant"
+
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+
+    put:
+      tags:
+        - Places
+      summary: Create eventParticipants
+      operationId: createEventParticipants
+      parameters:
+        - name: id_event
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/CreateEventParticipants'
+      responses:
+        '200':
+          description: List of participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+
+  /events/{event_id}/participants/attendance:
+    post:
+      tags:
+        - Places
+      summary:
+      operationId: checkAttendance
+      requestBody:
+        content:
+          application/json:
+              schema:
+                type: array
+
 
 components:
   securitySchemes:
@@ -1296,10 +1316,10 @@ components:
           format: date-time
     Page:
       type: integer
-      description: Start at `1`
+      description: Start at 1
     PageSize:
       type: integer
-      description: Cannot exceed `500`
+      description: Cannot exceed 500
     Exception:
       type: object
       properties:
@@ -1353,7 +1373,7 @@ components:
       type: object
       properties:
         idEvent:
-            type: string
+          type: string
         eventName:
           type: string
           example: "COURSE"
@@ -1400,4 +1420,3 @@ components:
             - EXPECTED
             - HERE
             - MISSING
-
